--- a/search_list/requirements.txt
+++ b/search_list/requirements.txt
@@ -1,16 +1,16 @@
 asn1crypto==0.24.0
-beautifulsoup4==4.8.0
-bs4==0.0.1
-certifi==2019.6.16
+beautifulsoup4==4.9.0
+bs4==4.9.0
+certifi==2021.5.30
 cffi==1.12.3
 chardet==3.0.4
-cryptography==2.7
+cryptography=2.7
 dj-database-url==0.5.0
-Django==2.2.4
+Django==3.0.3
 django-heroku==0.3.1
-gunicorn==19.9.0
 heroku==0.1.4
 idna==2.8
+pip==21.2.2
 psycopg2==2.7.6.1
 pycparser==2.19
 pyOpenSSL==19.0.0
@@ -19,7 +19,7 @@ python-dateutil==1.5
 pytz==2019.2
 requests==2.22.0
 six==1.12.0
-soupsieve==1.9.2
-sqlparse==0.3.0
-urllib3==1.24.2
-whitenoise==4.1.3
+soupsieve==2.2.1
+sqlparse==0.4.1
+urllib3==1.25.11
+whitenoise==5.3.0
