--- a/search_list/requirements.txt
+++ b/search_list/requirements.txt
@@ -4,7 +4,7 @@ bs4==4.9.0
 certifi==2021.5.30
 cffi==1.12.3
 chardet==3.0.4
-cryptography=2.7
+cryptography==2.7
 dj-database-url==0.5.0
 Django==3.0.3
 django-heroku==0.3.1
